// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.createOrUpdateCarrouselConfigurationMutation should create and update a CarrouselConfiguration for carrousel highlighted section type as admin 1`] = `
Object {
  "createOrUpdateCarrouselConfiguration": Object {
    "carrouselConfiguration": Object {
      "carrouselElements": Object {
        "edges": Array [
          Object {
            "node": Object {
              "buttonLabel": "Label 4",
              "description": "SectionCarrouselElement10 description",
              "endAt": null,
              "image": Object {
                "height": 310,
                "url": "https://capco.test/media/default/0001/01/cafetier.png",
                "width": 1156,
              },
              "isDisplayed": false,
              "position": 4,
              "redirectLink": "http://www.example.com",
              "startAt": null,
              "title": "SectionCarrouselElement10",
              "type": "THEME",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Label 5",
              "description": "SectionCarrouselElement11 description",
              "endAt": null,
              "image": Object {
                "height": 339,
                "url": "https://capco.test/media/default/0001/01/oculus.jpg",
                "width": 679,
              },
              "isDisplayed": false,
              "position": 5,
              "redirectLink": "http://www.example.com",
              "startAt": null,
              "title": "SectionCarrouselElement11",
              "type": "ARTICLE",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Label 6",
              "description": "SectionCarrouselElement12 description",
              "endAt": null,
              "image": Object {
                "height": 410,
                "url": "https://capco.test/media/default/0001/01/cafe.png",
                "width": 1024,
              },
              "isDisplayed": true,
              "position": 6,
              "redirectLink": "http://www.example.com",
              "startAt": null,
              "title": "SectionCarrouselElement12",
              "type": "PROJECT",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Label 1",
              "description": "SectionCarrouselElement7 description",
              "endAt": null,
              "image": Object {
                "height": 400,
                "url": "https://capco.test/media/default/0001/01/cannabis.jpg",
                "width": 600,
              },
              "isDisplayed": true,
              "position": 1,
              "redirectLink": "http://www.example.com",
              "startAt": null,
              "title": "SectionCarrouselElement7",
              "type": "ARTICLE",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Label 2",
              "description": "SectionCarrouselElement8 description",
              "endAt": null,
              "image": Object {
                "height": 200,
                "url": "https://capco.test/media/default/0001/01/confinement.jpg",
                "width": 355,
              },
              "isDisplayed": true,
              "position": 2,
              "redirectLink": "http://www.example.com",
              "startAt": null,
              "title": "SectionCarrouselElement8",
              "type": "PROJECT",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Label 3",
              "description": "SectionCarrouselElement9 description",
              "endAt": "2060-01-16 10:00:00",
              "image": Object {
                "height": 316,
                "url": "https://capco.test/media/default/0001/01/cereale.png",
                "width": 896,
              },
              "isDisplayed": true,
              "position": 3,
              "redirectLink": "http://www.example.com",
              "startAt": "2024-01-16 10:00:00",
              "title": "SectionCarrouselElement9",
              "type": "EVENT",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Libellé du bouton",
              "description": "Description de l'article",
              "endAt": null,
              "image": Object {
                "height": 339,
                "url": "https://capco.test/media/default/0001/01/oculus.jpg",
                "width": 679,
              },
              "isDisplayed": false,
              "position": 2,
              "redirectLink": "https://www.exemple.com",
              "startAt": null,
              "title": "Titre de l'article",
              "type": "ARTICLE",
            },
          },
        ],
      },
      "enabled": false,
      "isLegendEnabledOnImage": true,
      "position": 16,
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.createOrUpdateCarrouselConfigurationMutation should create and update a CarrouselConfiguration for carrousel section type as admin 1`] = `
Object {
  "createOrUpdateCarrouselConfiguration": Object {
    "carrouselConfiguration": Object {
      "carrouselElements": Object {
        "edges": Array [
          Object {
            "node": Object {
              "buttonLabel": "Libellé du bouton",
              "description": "Description de l'événement",
              "endAt": "2060-09-01 00:00:00",
              "image": Object {
                "height": 112,
                "url": "https://capco.test/media/default/0001/01/giec.jpg",
                "width": 200,
              },
              "isDisplayed": false,
              "position": 1,
              "redirectLink": "https://www.exemple.com",
              "startAt": "2024-09-01 00:00:00",
              "title": "Titre de l'événement",
              "type": "EVENT",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Label 2",
              "description": "SectionCarrouselElement2 description",
              "endAt": null,
              "image": Object {
                "height": 200,
                "url": "https://capco.test/media/default/0001/01/confinement.jpg",
                "width": 355,
              },
              "isDisplayed": true,
              "position": 2,
              "redirectLink": "http://www.example.com",
              "startAt": null,
              "title": "SectionCarrouselElement2",
              "type": "PROJECT",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Label 3",
              "description": "SectionCarrouselElement3 description",
              "endAt": null,
              "image": Object {
                "height": 316,
                "url": "https://capco.test/media/default/0001/01/cereale.png",
                "width": 896,
              },
              "isDisplayed": true,
              "position": 3,
              "redirectLink": "http://www.example.com",
              "startAt": null,
              "title": "SectionCarrouselElement3",
              "type": "EVENT",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Label 4",
              "description": "SectionCarrouselElement4 description",
              "endAt": null,
              "image": Object {
                "height": 310,
                "url": "https://capco.test/media/default/0001/01/cafetier.png",
                "width": 1156,
              },
              "isDisplayed": false,
              "position": 4,
              "redirectLink": "http://www.example.com",
              "startAt": null,
              "title": "SectionCarrouselElement4",
              "type": "THEME",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Label 5",
              "description": "SectionCarrouselElement5 description",
              "endAt": null,
              "image": Object {
                "height": 339,
                "url": "https://capco.test/media/default/0001/01/oculus.jpg",
                "width": 679,
              },
              "isDisplayed": false,
              "position": 5,
              "redirectLink": "http://www.example.com",
              "startAt": null,
              "title": "SectionCarrouselElement5",
              "type": "ARTICLE",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Label 6",
              "description": "SectionCarrouselElement6 description",
              "endAt": null,
              "image": Object {
                "height": 410,
                "url": "https://capco.test/media/default/0001/01/cafe.png",
                "width": 1024,
              },
              "isDisplayed": true,
              "position": 6,
              "redirectLink": "http://www.example.com",
              "startAt": null,
              "title": "SectionCarrouselElement6",
              "type": "PROJECT",
            },
          },
          Object {
            "node": Object {
              "buttonLabel": "Libellé du bouton",
              "description": "Description de l'article",
              "endAt": null,
              "image": Object {
                "height": 339,
                "url": "https://capco.test/media/default/0001/01/oculus.jpg",
                "width": 679,
              },
              "isDisplayed": false,
              "position": 2,
              "redirectLink": "https://www.exemple.com",
              "startAt": null,
              "title": "Titre de l'article",
              "type": "ARTICLE",
            },
          },
        ],
      },
      "enabled": false,
      "isLegendEnabledOnImage": true,
      "position": 15,
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.createOrUpdateCarrouselConfigurationMutation should not create more than 8 section carrousel items for carrousel highlighted section type 1`] = `
Object {
  "createOrUpdateCarrouselConfiguration": Object {
    "carrouselConfiguration": null,
    "errorCode": "TOO_MANY_CARROUSEL_ITEMS",
  },
}
`;

exports[`mutations.createOrUpdateCarrouselConfigurationMutation should not create more than 8 section carrousel items for carrousel section type 1`] = `
Object {
  "createOrUpdateCarrouselConfiguration": Object {
    "carrouselConfiguration": null,
    "errorCode": "TOO_MANY_CARROUSEL_ITEMS",
  },
}
`;
